new projects and updates

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 <body>
     <div id="mainContainer">
         <!-- The overlay -->
+        <div class="justMenu">
+          <a href="index.html">HOME</a>
+          <a href="projects.html">PROJECTS</a>
+          <a href="about.html">ABOUT</a>
+          <a href="donate.html">DONATE</a>
+          <img class="logoW" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100px">
+        </div>
         <div id="myNav" class="overlay">
 
             <!-- Button to close the overlay navigation -->
@@ -31,14 +38,16 @@
             <a href="projects.html">PROJECTS</a>
             <a href="about.html">ABOUT</a>
             <a href="donate.html">DONATE</a>
+            <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" style="z-index: 0;">
             </div>
   
-  </div>
+        </div>
   
   <!-- Use any element to open/show the overlay navigation menu -->
   <span class="mobileMenu" style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; </span>
+ 
   <div class="parallaX">
-    <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" style="z-index: 0;">
+   
   </div>
  
   <div class="statS">
@@ -92,6 +101,7 @@
   <div class="projects">
     <div class="twoInOne">
     <div class="project top">
+      <a href="katoe.html" style="text-decoration: none;">
       <img src="Assets/one.png" alt="bacgkround of Africa" width="100%">
       <h2>Project KATOE</h2>
       <div id="myProgress">
@@ -102,8 +112,10 @@
         <p>$3,000 goal</p>
       </div>
       <a href="katoe.html" class="learnMore">Learn more...</a>
+    </a>
     </div>
     <div class="project top">
+      <a href="Back-2-school-drive.html" style="text-decoration: none;">
       <img src="Assets/Bback-to-school.png" alt="bacgkround of Africa" width="100%">
       <h2>Back 2 School Drive</h2>
       <div id="myProgress">
@@ -114,10 +126,12 @@
         <p>$1,000 goal</p>
       </div>
       <a href="Back-2-school-drive.html" class="learnMore">Learn more...</a>
+    </a>
     </div>
     </div>
     <div class="twoInOne">
     <div class="project top">
+      <a href="Community-Center.html" style="text-decoration: none;">
       <img src="Assets/three.png" alt="bacgkround of Africa" width="100%">
       <h2>Community Center</h2>
       <div id="myProgress">
@@ -128,8 +142,10 @@
         <p>$40,000 goal</p>
       </div>
       <a href="Community-Center.html" class="learnMore">Learn more...</a>
+    </a>
     </div>
     <div class="project top">
+      <a href="sponsor-a-child.html" style="text-decoration: none;">
       <img src="Assets/four.png" alt="bacgkround of Africa" width="100%">
       <h2>Sponsor a Child</h2>
       <div id="myProgress">
@@ -140,6 +156,7 @@
         <p>2,000 kids goal</p>
       </div>
       <a href="sponsor-a-child.html" class="learnMore">Learn more...</a>
+    </a>
     </div>
     </div>
   </div>
