--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,13 @@
 <body>
     <div id="mainContainer">
         <!-- The overlay -->
+        <div class="justMenu">
+          <a href="index.html">HOME</a>
+          <a href="projects.html">PROJECTS</a>
+          <a href="about.html">ABOUT</a>
+          <a href="donate.html">DONATE</a>
+          <img class="logoW" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100px">
+        </div>
         <div id="myNav" class="overlay">
 
             <!-- Button to close the overlay navigation -->
@@ -31,6 +38,7 @@
             <a href="projects.html">PROJECTS</a>
             <a href="about.html">ABOUT</a>
             <a href="donate.html">DONATE</a>
+            <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" style="z-index: 0;">
             </div>
   
   </div>
@@ -41,7 +49,7 @@
     <div class="animatesss">
       <span class="colorBlue"></span>
    
-    <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" height="auto">
+   
     </div>
     </div>
   
