--- a/projects.html
+++ b/projects.html
@@ -66,6 +66,7 @@
     <div class="projects">
     <div class="twoInOne">
     <div class="project top">
+      <a href="katoe.html" style="text-decoration: none;">
       <img src="Assets/one.png" alt="bacgkround of Africa" width="100%">
       <h2>Project KATOE</h2>
       <div id="myProgress">
@@ -76,8 +77,10 @@
         <p>$3,000 goal</p>
       </div>
       <a href="katoe.html" class="learnMore">Learn more...</a>
+      </a>
     </div>
     <div class="project top">
+      <a href="Back-2-school-drive.html" style="text-decoration: none;">
       <img src="Assets/Bback-to-school.png" alt="bacgkround of Africa" width="100%">
       <h2>Back 2 School Drive</h2>
       <div id="myProgress">
@@ -88,10 +91,12 @@
         <p>$1,000 goal</p>
       </div>
       <a href="Back-2-school-drive.html" class="learnMore">Learn more...</a>
+      </a>
     </div>
     </div>
     <div class="twoInOne">
     <div class="project top">
+      <a href="Community-Center.html" style="text-decoration: none;">
       <img src="Assets/three.png" alt="bacgkround of Africa" width="100%">
       <h2>Community Center</h2>
       <div id="myProgress">
@@ -102,8 +107,10 @@
         <p>$40,000 goal</p>
       </div>
       <a href="Community-Center.html" class="learnMore">Learn more...</a>
+      </a>
     </div>
     <div class="project top">
+      <a href="sponsor-a-child.html" style="text-decoration: none;">
       <img src="Assets/four.png" alt="bacgkround of Africa" width="100%">
       <h2>Sponsor a Child</h2>
       <div id="myProgress">
@@ -114,6 +121,7 @@
         <p>2,000 kids goal</p>
       </div>
       <a href="sponsor-a-child.html" class="learnMore">Learn more...</a>
+      </a>
     </div>
     </div>
   </div>
