--- a/donate.html
+++ b/donate.html
@@ -69,8 +69,8 @@
       CHANGES A LIFE.</h1>
       
   </div>
-<div class="LetsDonate">
-  <iframe src="https://donorbox.org/embed/qewfa-donation" name="donorbox" allowpaymentrequest="allowpaymentrequest" seamless="seamless" frameborder="0" scrolling="no" height="900px" width="100%" style="max-width: 500px; min-width: 250px; max-height:none!important"></iframe>
+<div class="letsDonate">
+  <iframe src="https://donorbox.org/embed/qewfa-donation" name="donorbox" allowpaymentrequest="allowpaymentrequest" seamless="seamless" frameborder="0" scrolling="no" height="auto" width="100%" style="max-width: 400px; min-width: 250px; max-height:none!important"></iframe>
   
 </div>
 
