--- a/donate.html
+++ b/donate.html
@@ -81,7 +81,7 @@
   <div class="footer">
     <h1>Stay connected with QEWFA!</h1>
      <div class="container">
-       <form target="_blank" action="https://formsubmit.co/aleqsandregor@gmail.com" method="POST">
+       <form target="_blank" action="https://formsubmit.co/info@qewfa.org" method="POST">
            <div class="form-group">
                <div class="form-row">
                    <div class="col">
