--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 <body>
     <div id="mainContainer">
         <!-- The overlay -->
+        <div class="LogoMC">
+          <img class="logoW" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="140px">
+        </div>
         <div class="justMenu">
           <a href="index.html">HOME</a>
           <a href="projects.html">PROJECTS</a>
           <a href="about.html">ABOUT</a>
           <a href="donate.html">DONATE</a>
-          <img class="logoW" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100px">
+          
         </div>
         <div id="myNav" class="overlay">
 
