makes me a little bit

--- a/sponsor-a-child.html
+++ b/sponsor-a-child.html
@@ -21,11 +21,14 @@
     <div id="mainContainer">
         <!-- The overlay -->
         <div class="justMenu">
+          <div class="LogoMC">
+            <img class="logoW" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100px">
+          </div>
           <a href="index.html">HOME</a>
           <a href="projects.html">PROJECTS</a>
           <a href="about.html">ABOUT</a>
           <a href="donate.html">DONATE</a>
-          <img class="logoW" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100px">
+          
         </div>
         <div id="myNav" class="overlay">
 
