--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        <meta property="og:image" content="Assets/bannsner.png">
+        <meta property="og:image" content="Assets/banner2a.png">
         <meta property="og:image:type" content="image/jpeg">
         <meta property="og:image:width" content="400">
         <meta property="og:image:height" content="300">
-        <link rel="icon" type="image/png" href="./Assets/ico.png">
+        <link rel="icon" type="image/png" href="./Assets/icoQEWFA.png">
 </head>
 
 
@@ -71,7 +71,7 @@
         <h3>DON'T HAVE ACCESS<BR>TO CLEAN WATER</h3>
       </div>
       <div class="leftSide1">
-        <img src="Assets/a2a.png" alt="group of people">
+        <img src="Assets/a22a.png" alt="group of people">
       </div>
     </div>
 <!--side3-->
@@ -87,6 +87,20 @@
 
   </div>
   
+  <div class="aboutUs" style="margin-top: 20px;">
+    <img src="Assets/Group92.png" alt="team members picture" width="100%" class="people">
+   <!--<img src="Assets/Group85.png" alt="design asset group of people" width="70%" class="designElement">--> 
+    <div class="box effect2"><div class="typewriter">
+      <h2>ABOUT US</h2>
+    </div></div>
+    <h3>QUALITY EDUCATION <br>
+      & WATER FOR ALL <span>(QEWFA)</span></h3>
+      <p>	QEWFA is a 501(c)3 nonprofit organization headquartered in Tucson, Arizona. We provide sustainable solutions to the community of Togo that addresses lack of water, contaminated water, and methods of collecting clean drinkable water in Togo. We fund and implement life-changing water well systems to drive economic development and build self-sufficient communities.<br><br>
+
+        At QEWFA our responsibility to the people and communities we serve stretches far beyond simply providing water. We aim to build quality wells, educate people to maintain these wells, and leave the community with sustainable methods to collect clean and drinkable water long after our projects are implemented.<br><br>
+      
+        QEWFA was founded by Yao Akato, a native of Togo, to help develop educational resources, improve sanitation facilities, and to provide water wells to the marginalized and impoverished communities in his homeland.</p>
+  </div>
   
   <div id="partTwo">
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
@@ -164,20 +178,7 @@
     </div>
     </div>
   </div>
-  <div class="aboutUs">
-    <img src="Assets/Group92.png" alt="team members picture" width="100%" class="people">
-   <!--<img src="Assets/Group85.png" alt="design asset group of people" width="70%" class="designElement">--> 
-    <div class="box effect2"><div class="typewriter">
-      <h2>ABOUT US</h2>
-    </div></div>
-    <h3>QUALITY EDUCATION <br>
-      & WATER FOR ALL <span>(QEWFA)</span></h3>
-      <p>	QEWFA is a 501(c)3 nonprofit organization headquartered in Tucson, Arizona. We provide sustainable solutions to the community of Togo that addresses lack of water, contaminated water, and methods of collecting clean drinkable water in Togo. We fund and implement life-changing water well systems to drive economic development and build self-sufficient communities.<br><br>
 
-        At QEWFA our responsibility to the people and communities we serve stretches far beyond simply providing water. We aim to build quality wells, educate people to maintain these wells, and leave the community with sustainable methods to collect clean and drinkable water long after our projects are implemented.<br><br>
-      
-        QEWFA was founded by Yao Akato, a native of Togo, to help develop educational resources, improve sanitation facilities, and to provide water wells to the marginalized and impoverished communities in his homeland.</p>
-  </div>
   <div class="footer">
    <h1>Stay connected with QEWFA!</h1>
     <div class="container">
