--- a/sponsor-a-child.html
+++ b/sponsor-a-child.html
@@ -9,11 +9,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        <meta property="og:image" content="Assets/bannsner.png">
+        <meta property="og:image" content="Assets/banner2a.png">
         <meta property="og:image:type" content="image/jpeg">
         <meta property="og:image:width" content="400">
         <meta property="og:image:height" content="300">
-        <link rel="icon" type="image/png" href="./Assets/ico.png">
+        <link rel="icon" type="image/png" href="./Assets/icoQEWFA.png">
 </head>
 
 
@@ -96,7 +96,7 @@
 
   <div id="partTwo">
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
-        <a href="donate.html">DONATE NOW!</a>
+   <a class="dbox-donation-button" style="background: #333333; color: #fff;text-decoration: none; font-family: 'Montserrat', sans-serif;display: inline-block;font-size: 16px;padding: 15px 38px;-webkit-border-radius: 2px;-moz-border-radius: 2px;border-radius: 2px;box-shadow: 0 1px 0 0 #1f5a89;text-shadow: 0 1px rgba(0, 0, 0, 0.3);" href="https://donorbox.org/qewfakids">Donate</a> 
   </div>
 <div class="footer">
   <h1>Stay connected with QEWFA!</h1>
@@ -131,7 +131,7 @@
  </div>
 </div>
    
-     
+        <script type="text/javascript" defer src="https://donorbox.org/install-popup-button.js"></script>
         <script src="javascript/app.js"></script>
 </body>
 </html>
