--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <meta property="og:image:type" content="image/jpeg">
         <meta property="og:image:width" content="400">
         <meta property="og:image:height" content="300">
-        <link rel="icon" type="image/png" href="./Assets/icoQEWFA.png">
+        <link rel="icon" type="image/png" href="./Assets/favicon.png">
 </head>
 
 
