--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
         <meta charset="UTF-8">
         <title>QEWFA-QUALITY EDUCATION & WATER FOR ALL (QEWFA)</title>
+
+        <!---------Favicon-->
+       
+        <!--------Favicoon End-->
+
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="CSS/responsive.css">
         <link rel="stylesheet" href="CSS/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        <meta property="og:image" content="Assets/banner2a.png">
+        <meta property="og:image" content="Assets/banner21a.png">
         <meta property="og:image:type" content="image/jpeg">
         <meta property="og:image:width" content="400">
         <meta property="og:image:height" content="300">
+       
         <link rel="icon" type="image/png" href="./Assets/icoQEWFA.png">
+        <link rel="shortcut icon" type="image/png" href="./Assets/icoQEWFA.png">
 </head>
 
 
@@ -71,7 +78,7 @@
         <h3>DON'T HAVE ACCESS<BR>TO CLEAN WATER</h3>
       </div>
       <div class="leftSide1">
-        <img src="Assets/a22a.png" alt="group of people">
+        <img src="Assets/a22a1.png" alt="group of people">
       </div>
     </div>
 <!--side3-->
@@ -204,7 +211,7 @@
     <a href="tel:1520-276-6627"><img src="Assets/phone.png" width="50px" alt="the icon of a phone"></a>
   </div>
  
-  <img src="Assets/Asset24.png" alt="logo Seal of Transperency" width="70px">
+  <img src="Assets/guidestar-gold-seal-2021-rgb.svg" alt="logo Seal of Transperency" width="80px">
     <h5>WE RESPECT YOUR PRIVACY.
       <br><br>
 
