updates to project goal and images

--- a/Community-Center.html
+++ b/Community-Center.html
@@ -71,11 +71,14 @@
           <p>&emsp;  The learning center with be equipped with computers for studying basic computer skills and internet to be able to connect to readily available information. It will also serve as a place for student to have access to hygiene facility such as restrooms and hand washing station. Your donation will enable us bring this to fruition.</p>
           </div>
         <div class="katoeRight">
-          <img src="Assets/community-center2.png" alt="kid is gatherign water in his bottle froma stream">
+          <img src="Assets/qccenter.png" alt="kid is gatherign water in his bottle froma stream">
         </div>
       </div>
     </div>
+<!--  
     <h1 style="text-align: center; color: #2196F3;">Scroll down to continue viewing projects...</h1>
+-->
+
     <div id="mySidenav5" class="sidenav5">
       <a href="katoe.html" id="menu1">Project KATOE</a>
       <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
@@ -85,11 +88,11 @@
   <div class="project top tops" style="margin-top: 30px; width: 100%; padding: 10px;">
     <h2>Community Center</h2>
     <div id="myProgress">
-      <div id="myBar3"></div>
+      <div id="myBar0"></div>
     </div>
     <div class="priceProgress">
-      <p>1% raised</p>
-      <p>$40,000 goal</p>
+      <p>0% raised</p>
+      <p>$100,000 goal</p>
     </div>
   </div>
 </div>
