--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </div>
       <div class="priceProgress">
         <p>100% raised</p>
-        <p>$3,000 goal</p>
+        <p>$30,000 goal</p>
       </div>
       <a href="katoe.html" class="learnMore">Learn more...</a>
     </a>
@@ -157,14 +157,14 @@
     <div class="twoInOne">
     <div class="project top">
       <a href="Community-Center.html" style="text-decoration: none;">
-      <img src="Assets/three.png" alt="bacgkround of Africa" width="100%">
+      <img src="Assets/ccenter.png" alt="bacgkround of Africa" width="100%">
       <h2>Community Center</h2>
       <div id="myProgress">
-        <div id="myBar3"></div>
+        <div id="myBar0"></div>
       </div>
       <div class="priceProgress">
-        <p>1% raised</p>
-        <p>$40,000 goal</p>
+        <p>0% raised</p>
+        <p>$100,000 goal</p>
       </div>
       <a href="Community-Center.html" class="learnMore">Learn more...</a>
     </a>
