--- a/projects.html
+++ b/projects.html
@@ -97,20 +97,20 @@
     </div>
     </div>
     <div class="twoInOne">
-    <div class="project top">
-      <a href="Community-Center.html" style="text-decoration: none;">
-      <img src="Assets/three.png" alt="bacgkround of Africa" width="100%">
-      <h2>Community Center</h2>
-      <div id="myProgress">
-        <div id="myBar3"></div>
-      </div>
-      <div class="priceProgress">
-        <p>1% raised</p>
-        <p>$40,000 goal</p>
-      </div>
-      <a href="Community-Center.html" class="learnMore">Learn more...</a>
+      <div class="project top">
+        <a href="Community-Center.html" style="text-decoration: none;">
+        <img src="Assets/ccenter.png" alt="bacgkround of Africa" width="100%">
+        <h2>Community Center</h2>
+        <div id="myProgress">
+          <div id="myBar0"></div>
+        </div>
+        <div class="priceProgress">
+          <p>0% raised</p>
+          <p>$100,000 goal</p>
+        </div>
+        <a href="Community-Center.html" class="learnMore">Learn more...</a>
       </a>
-    </div>
+      </div>
     <div class="project top">
       <a href="sponsor-a-child.html" style="text-decoration: none;">
       <img src="Assets/four.png" alt="bacgkround of Africa" width="100%">
