--- a/Back-2-school-drive.html
+++ b/Back-2-school-drive.html
@@ -78,15 +78,15 @@
       <div class="project top tops" style="margin-top: 30px; width: 100%;padding: 10px;">
           <h2>Back 2 School Drive</h2>
         <div id="myProgress">
-          <div id="myBar2"></div>
+          <div id="myBar3"></div>
         </div>
         <div class="priceProgress">
           <p>3% raised</p>
-          <p>$1,000 goal</p>
+          <p>$5,000 goal</p>
         </div>
       </div>
       </div>
-    <h1 style="text-align: center; color: #2196F3;">Scroll down to continue viewing projects...</h1>
+    <h1 style="text-align: center; color: #2196F3;">See our other Projects..</h1>
     <div id="mySidenav5" class="sidenav5">
       <a href="katoe.html" id="menu1">Project KATOE</a>
       <a href="Community-Center.html" id="menu3">Community Center</a>
