--- a/Community-Center.html
+++ b/Community-Center.html
@@ -78,13 +78,7 @@
 <!--  
     <h1 style="text-align: center; color: #2196F3;">Scroll down to continue viewing projects...</h1>
 -->
-
-    <div id="mySidenav5" class="sidenav5">
-      <a href="katoe.html" id="menu1">Project KATOE</a>
-      <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
-      <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
-    </div>
-    <div class="iJustNeedPadding">
+<div class="iJustNeedPadding">
   <div class="project top tops" style="margin-top: 30px; width: 100%; padding: 10px;">
     <h2>Community Center</h2>
     <div id="myProgress">
@@ -96,6 +90,14 @@
     </div>
   </div>
 </div>
+<h1 style="text-align: center; color: #2196F3;">See our other Projects..</h1>
+
+    <div id="mySidenav5" class="sidenav5">
+      <a href="katoe.html" id="menu1">Project KATOE</a>
+      <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
+      <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
+    </div>
+  
   <div id="partTwo">
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
    <a class="dbox-donation-button" style="background: #333333; color: #fff;text-decoration: none;font-family: Verdana,sans-serif;display: inline-block;font-size: 16px;padding: 15px 38px;-webkit-border-radius: 2px;-moz-border-radius: 2px;border-radius: 2px;box-shadow: 0 1px 0 0 #1f5a89;text-shadow: 0 1px rgba(0, 0, 0, 0.3);" href="https://donorbox.org/qewfacommunitycenter">Donate</a> 
