--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
       <img src="Assets/one.png" alt="bacgkround of Africa" width="100%">
       <h2>Project KATOE</h2>
       <div id="myProgress">
-        <div id="myBar1"></div>
+        <div id="myBar100"></div>
       </div>
       <div class="priceProgress">
-        <p>100% raised</p>
-        <p>$30,000 goal</p>
+        <p>100% raised - THANK YOU!!</p>
+        <p>$40,000 goal</p>
       </div>
       <a href="katoe.html" class="learnMore">Learn more...</a>
     </a>
@@ -174,11 +174,11 @@
       <img src="Assets/four.png" alt="bacgkround of Africa" width="100%">
       <h2>Sponsor a Child</h2>
       <div id="myProgress">
-        <div id="myBar4"></div>
+        <div id="myBar1"></div>
       </div>
       <div class="priceProgress">
-        <p>25% supported</p>
-        <p>2,000 kids goal</p>
+        <p>1% supported</p>
+        <p>50 Kids goal</p>
       </div>
       <a href="sponsor-a-child.html" class="learnMore">Learn more...</a>
     </a>
