--- a/sponsor-a-child.html
+++ b/sponsor-a-child.html
@@ -74,25 +74,27 @@
       </div>
     </div>
 
-    <h1 style="text-align: center; color: #2196F3;">Scroll down to continue viewing projects...</h1>
+    <div class="iJustNeedPadding">
+      <div class="project top tops" style="padding: 10px; width: 100%; margin-top: 30px;">
+        <h2>Children Sponsered</h2>
+        <div id="myProgress">
+          <div id="myBar1"></div>
+        </div>
+        <div class="priceProgress">
+          <p>1% supported</p>
+          <p>50 kids goal</p>
+        </div>
+      </div>
+    </div>
+
+    <h1 style="text-align: center; color: #2196F3;">See our other Projects.</h1>
     <div id="mySidenav5" class="sidenav5">
       <a href="katoe.html" id="menu1">Project KATOE</a>
       <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
       <a href="Community-Center.html" id="menu3">Community Center</a>
     </div>
 
-    <div class="iJustNeedPadding">
-  <div class="project top tops" style="padding: 10px; width: 100%; margin-top: 30px;">
-    <h2>Children Sponsered</h2>
-    <div id="myProgress">
-      <div id="myBar4"></div>
-    </div>
-    <div class="priceProgress">
-      <p>25% supported</p>
-      <p>2,000 kids goal</p>
-    </div>
-  </div>
-</div>
+  
 
   <div id="partTwo">
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
